--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: url('/photo-collage.png.jpg');
+    background-image: url('/photo-collage.png');
     background-size: cover;
     /* This will ensure the image covers the entire background */
     background-repeat: no-repeat;
