--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Balonku';
-    src: url("/BalonkuRegular-la1w.otf") format("opentype");
+    src: url("BalonkuRegular-la1w.otf") format("opentype");
 }
 
 * {
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: url('/photo-collage.png');
+    background-image: url('photo-collage.png');
     background-size: cover;
     /* This will ensure the image covers the entire background */
     background-repeat: no-repeat;
